[tool.poetry]
name = "clip"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.7.1"
torchvision = "0.8.2"
ftfy = "^6.0.3"
regex = "^2021.8.28"
pymorphy2 = "^0.9.1"
transformers = "^4.10.2"
scikit-image = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
